# docsportal

./: .gitignore  .pre-commit-config.yaml  .zuul.yaml  README.md  next.config.js  package.json  setup.cfg  tox.ini
app/: layout.js  page.js
components/: Container.jsx  Footer.jsx  Header.jsx  MainWrapper.jsx  SideNavigation.jsx
doc/: requirements.txt
doc/source/: api.rst  app.rst  application.rst  big_data.rst  blueprint_cce_vault.rst  blueprints.rst  compute.rst  computing.rst  conf.py  configuration.rst  container.rst  data_analysis.rst  database.rst  developer.rst  drivers.rst  iac.rst  index.rst  links.rst  md.rst  network.rst  other.rst  popular_services.rst  releasenotes.rst  sdk.rst  security-services.rst  security.rst  services.rst  services.yaml  storage.rst
doc/source/_ext/: cont.py
doc/source/additional/: endpoints.rst  glossary.rst  index.rst  permissions.rst  sd-manual.rst  sd-userguide.rst
doc/source/dashboard/: index.rst
doc/source/developer/: api.rst  drivers.rst  iac.rst  index.rst  sdk.rst  third-party-sdk.rst
doc/source/dot/: cce_vault_overview.dot
doc/source/internal/: index.rst
doc/source/internal-documentation/: index.rst
doc/source/releasenotes/: index.rst
doc/source/security/: index.rst
doc/source/services/: anti_ddos.rst  application_operations_management.rst  auto_scaling.rst  bare_metal_server.rst  cli.rst  cloud_backup_recovery.rst  cloud_container_engine.rst  cloud_eye.rst  cloud_search_service.rst  cloud_server_backup_service.rst  compute.rst  (+43 more)
styles/: Container.module.css  MainWrapper.module.css  global.css
(+59 files in other folders)
