[metadata]
name = docsportal
summary = T Cloud Public Service Documentation
author = T Cloud Public Ecosystem Squad
author_email = otc_ecosystem_squad@t-systems.com
home_page = https://docs.otc.t-systems.com/
python_requires = >= 3.10
classifier =
    Environment :: OpenStack
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Documentation
